feat: add domain/user unit tests
